Fix Plan Icon not Fitting into Circle

--- a/client/blocks/upgrade-nudge-expanded/style.scss
+++ b/client/blocks/upgrade-nudge-expanded/style.scss
@@ -45,10 +45,8 @@
 	}
 
 	.upgrade-nudge-expanded__title-plan-icon {
-		width: 55px;
-		height: 55px;
-		margin: 1px;
-		background-repeat: no-repeat;
+		width: 56px;
+		height: 56px;
 	}
 
 	.upgrade-nudge-expanded__title-message {
